--- a/backend/package.json
+++ b/backend/package.json
@@ -22,15 +22,20 @@
   },
   "dependencies": {
     "@prisma/client": "^5.3.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
     "zod": "^3.22.2"
   }
 }
